# Basic_NN

./: CMakeLists.txt  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetwork_CUDA.cu  Perceptron.cpp  Perceptron.h  main.cpp  main_demo.cpp
